Cleanup. Various fixes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ build.version=@project.version@
 build.timestamp=@timestamp@
 scheduled=true
 
+server.port=8080
+
 # mongodb config
 spring.data.mongodb.database=QABot
 spring.data.mongodb.uri=mongodb+srv://qa-user:FKIJGaFTaM10pxWx@qabot.wxlcgda.mongodb.net/QABot?retryWrites=true&w=majority
